--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "classnames": "^2.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^9.1.0",
     "react-router": "^6.20.1",
     "react-router-dom": "^6.20.1",
     "react-scripts": "5.0.1",
+    "redax": "^0.0.0",
+    "redux": "^5.0.1",
     "uuid": "^9.0.1",
     "web-vitals": "^2.1.4"
   },
